--- a/Startup.html
+++ b/Startup.html
@@ -19,19 +19,28 @@
 </form>
 
 <div id="content"></div>
-
 <script type="text/babel">
 // React since react V4 does not read query parameters so we read query parameter directly
 const urlParams = new URLSearchParams(window.location.search);
 const ort = urlParams.get('ort');
-
 if(ort!=null) alert(ort);
 
 function Weather_container(props){
   return (
     <div className="box">
-      <h1>{props.city_name}</h1>
-      <p>{props.city_info}</p>
+      <h1>{props.name}</h1>
+      <p>{props.type}</p>
+      <p>{props.country}</p>
+      <p>{props.geolocation}</p>
+      <p>{props.about}</p>
+      <p>{props.province}</p>
+      <p>{props.county}</p>
+      <p>{props.municipality}</p>
+      <p>{props.climatecode}</p>
+      <p>{props.climate}</p>
+      <p>{props.charter}</p>
+      <p>{props.postalcode}</p>
+      <p>{props.areacode}</p>
     </div>
   );
 }
@@ -39,62 +48,113 @@ function Weather_container(props){
 function Weather_table(props){
   return(
         <tr>
-          <td>{props.climatcode}</td>
-          <td>{props.temp}</td>
-          <td>{props.rain}</td>
-          <td>{props.wind}</td>
-          <td>{props.sun}</td>
-          <td>{props.reability}</td>
+          <td>{props.name}</td>
+          <td>{props.fromtime}</td>
+          <td>{props.totime}</td>
+          <td>{props.periodno}</td>
+          <td>{props.periodname}</td>
+          <td>{props.auxdata}</td>
         </tr>
     );
 }
 
-function Chat(props){
+function Chat_post(props){
   return(
-    <div className="chat_icon_div">
-      <img src="chat_icon.png" className="chat_icon"/>
-    </div>
+    <div className="chat_comment">
+          <h2>{props.location}</h2>
+          <p style={{fontSize:"14px"}}>{props.content}</p>
+          <p>Author ID: {props.author}</p>
+          <div className="like_btn_border">
+            <div className="like_btn"><img src="like_btn.png" className="like_btn_icon"/>{props.user}</div>
+          </div>          
+          <div style={{opacity: "70%", bottom:"10px"}}>Posted: {props.posted}</div>
+        </div>
     );
 }
 
 const data = [
-  { climatcode: '1', temp: '15', rain: '4,2 mm', wind: '1 m/s', sun: '07:30', reability: 'sure'},
-  { climatcode: '2', temp: '13', rain: '7,4 mm', wind: '5 m/s', sun: '07:32', reability: 'unsure'},
-  { climatcode: '3', temp: '10', rain: '3,0 mm', wind: '2 m/s', sun: '07:35', reability: 'unsure'},
-  { climatcode: '3', temp: '10', rain: '3,0 mm', wind: '2 m/s', sun: '07:35', reability: 'unsure'}
+  { name:'jönköping', fromtime: '1', totime: '15', periodno: '4,2 mm', periodname: '1 m/s', auxdata: '07:30'},
+  { name:'', fromtime: '2', totime: '13', periodno: '7,4 mm', periodname: '5 m/s', auxdata: '07:32'},
+  { name:'', fromtime: '3', totime: '10', periodno: '3,0 mm', periodname: '2 m/s', auxdata: '07:35'},
+  { name:'', fromtime: '3', totime: '10', periodno: '3,0 mm', periodname: '2 m/s', auxdata: '07:35', comment_id:"123", user_id:"0101", date:"01-21-2012"}
 ];
 
-function App(){
-  return(
+const data_comment = [
+  { user: "2", id:"1111", location:"Grums", replyto:"", author:"1", content:"Här uppe i norr är det så kallt denna veckan så att snuset fryser i fickan och värmlänningarna klagar på odören från bruket. Veklingar.", posted:"2021-11-01 09:30" },
+  { user: "1",id:"1111", location:"Grums", replyto:"", author:"2", content:"aknade upp av stanken från pappersbruket som vinden tryckte framför sig längs älven.", posted:"2021-11-01 09:30" },
+  { user: "2",id:"1111", location:"Grums", replyto:"", author:"3", content:"aknade upp av stanken från pappersbruket som vinden tryckte framför sig längs älven.", posted:"2021-11-01 09:30" },
+  { user: "3",id:"1111", location:"Grums", replyto:"", author:"4", content:"aknade upp av stanken från pappersbruket som vinden tryckte framför sig längs älven.", posted:"2021-11-01 09:30" },
+  { user: "1",id:"1112", location:"Jönköping", replyto:"", author:"5", content:"vaknade upp som vinden tryckte framför sig längs älven.", posted:"2021-11-01 09:33" }
+];
+
+class App extends React.Component{
+  constructor (props){
+    super(props);
+    this.state ={
+      display : props.display
+    };
+    this.handleClick = this.handleClick.bind(this);
+  }
+  handleClick(){
+    if(this.state.display == "block"){
+      this.setState({display:"none"});
+    }else{
+      this.setState({display:"block"});
+    }
+  }
+  render(){
+    return(
     <div>
-      <Weather_container city_name="Jönköping" city_info="TEMPLETEINFO"/>
+      <Weather_container 
+        name="jönköping" 
+        about="Jönköping is a city in southern Sweden with 93,797 inhabitants (2015). Jönköping is situated at the southern end of Sweden's second largest lake, Vättern, in the province of Småland.The city is the seat of Jönköping Municipality, which has a population of 141 081 and is Småland's most populous municipality.Jönköping is also the seat of Jönköping County which has a population of 363 599. Jönköping is the seat of a district court and a court of appeal as well as the Swedish National Courts Administration. It is the seat of the Swedish Board of Agriculture."
+
+      />  
       <table className="box">
         <thead>
           <tr>
             <th scope="row"></th>
-            <th scope="row">Temperature max/min</th>
-            <th scope="row">Rain</th>
-            <th scope="row">Wind</th>
-            <th scope="row">Sun times up/down</th>
-            <th scope="row">Reability</th>
+            <th scope="row">From</th>
+            <th scope="row">To</th>
+            <th scope="row">Periodno</th>
+            <th scope="row">During</th>
+            <th scope="row">auxdata</th>
           </tr>
         </thead>
         <tbody>
-          {data.map(info =>
+          {data.map(data =>
             <Weather_table
-            climatcode={info.climatcode} 
-              temp={info.temp} 
-              rain={info.rain} 
-              wind={info.wind} 
-              sun={info.sun} 
-              reability={info.reability}
-              />
+              name={data.name}
+              fromtime={data.fromtime} 
+              totime={data.totime} 
+              periodno={data.periodno} 
+              periodname={data.periodname} 
+              auxdata={data.auxdata} 
+            />
           )}
         </tbody>
       </table>
-      <Chat/>
+      <div>{this.state.count}</div>
+      <div className="chat_icon_div" onClick={this.handleClick}>
+        <img src="chat_icon.png" className="chat_icon"/>
+        <div className="chat_box" style={{display:this.state.display}}>
+        <h1>Chat</h1>
+          {data_comment.map(chat =>
+            <Chat_post
+              id={chat.id}
+              location={chat.location}
+              replyto={chat.replyto}
+              author={chat.author}
+              content={chat.content}
+              posted={chat.posted}
+              user={chat.user}
+            />  
+          )}
+        </div>
+      </div>
     </div>
   );
+  }
 }
 
 ReactDOM.render(
